# network-analyzer

./: .gitignore  CONTRIBUTORS.md  README.md  pyproject.toml
config/: config.yaml
config/messages/: es_messages.yaml
docs/: ai_plan.md  entergable_4.md  entregable_3.md  proposal.md  reporte_final.md
prompts/: prompt_v1.json  prompt_v1.txt
proposals/: proposal.md
src/network_analyzer/: __init__.py  main.py
src/network_analyzer/acquisition/: acquire.py
src/network_analyzer/analysis/: ai_analyze_report.py  analyze.py
src/network_analyzer/response/: reply.py
src/network_analyzer/utils/: ai_analyze_report.py  config.py  dispatch_reply.py  max_attempts.py  menu.py  messages.py  models.py  scan_models.py  setup_logging.py  validate.py
