[project]
name = "network-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
	{ name = "Sebastian Alighieri", email = "sebastian.alighierir@uanl.edu.mx" },
]
requires-python = ">=3.13"
dependencies = [
	"nmapthon2>=0.1.5",
	"openai>=2.8.1",
	"pydantic>=2.12.4",
	"pyfiglet>=1.0.4",
	"python-json-logger>=4.0.0",
	"pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
